# ots2

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .npmrc  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  PR_EVALUATION_REPORT.md  PR_FOLLOWUP.md  PR_REVIEW.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  security-audit.yml  tests.yml
public/: .gitkeep
src/: App.vue  constants.ts  di_container.ts  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-capability.json
src-tauri/icons/: .gitkeep  README.md
src-tauri/src/: api.rs  commands.rs  error.rs  lib.rs  main.rs  storage.rs
src-tauri/src/api/: client.rs  mod.rs  tests.rs  types.rs
src/components/: ApiConfig.vue  CreateSecret.vue  MainView.vue  RetrieveSecret.vue  SecretList.vue  Settings.vue  SetupView.vue
src/composables/: useSecrets.ts
src/core/: env.ts  error.ts  router.ts
src/features/secret/: secret_feature.vue
src/features/secret/store/: secret_store.ts
src/features/secret/view/: SecretForm.vue  SecretResult.vue
src/features/settings/: settings_feature.vue
src/features/settings/store/: settings_store.ts
src/features/settings/view/: SettingsForm.vue
src/main/: index.ts  preload.ts
src/main/api/: client.ts
src/main/ipc/: index.ts
src/main/security/: certificate-pinning.ts  session.ts
src/main/storage/: secure-storage.ts
src/network/: cert_pin.ts  dto.ts  ots_client.ts  retry_policy.ts
src/renderer/: App.vue  main.ts  style.css
src/renderer/components/: AuthConfig.vue  CreateSecret.vue  RetrieveSecret.vue
src/renderer/stores/: app.ts  auth.ts  secrets.ts
src/repositories/: secretRepository.ts
src/security/: app_lock.ts  key_helper.ts  secure_kv.ts
src/services/: tauri.ts
src/services/__tests__/: tauri.test.ts
src/shared/types/: api.ts  app.ts  index.ts
src/shared/utils/: crypto.ts  index.ts  validation.ts
src/stores/: apiStore.ts  app.ts  secrets.ts
src/stores/__tests__/: app.test.ts
src/types/: api.ts  index.ts
tests/: README.md  setup.ts
tests/unit/core/: error.test.ts
tests/unit/network/: dto.test.ts
