[package]
name = "onetimesecret-desktop"
version = "0.1.0"
description = "Secure, privacy-first desktop application for Onetimesecret"
authors = ["Onetime Secret"]
license = "MIT"
repository = "https://github.com/onetimesecret/ots2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Secure storage for API credentials
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Base64 encoding for API authentication
base64 = "0.22"

# URL parsing and validation
url = "2.5"
