[package]
name = "ots-client"
version = "0.1.0"
description = "Privacy-first desktop client for One-Time Secret"
authors = ["Onetime Secret"]
license = "MIT"
repository = "https://github.com/onetimesecret/ots2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["protocol-asset"] }
tauri-plugin-stronghold = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
